--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -133,13 +133,11 @@
         <%= link_to item_path(item.id) do %>
         <div class='item-img-content'>
           <%= image_tag item.image, class: "item-img", alt: "商品画像" %>
-
-          <%# 商品が売れていればsold outを表示しましょう %>
+      <% if Customer.where(item_id: item.id).exists? %>
           <div class='sold-out'>
-           <%# <span>Sold Out!!</span> %>
+           <span>Sold Out!!</span>
           </div>
-          <%# //商品が売れていればsold outを表示しましょう %>
-
+          <% end %>
         </div>
         <div class='item-info'>
           <h3 class='item-name'>
