--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -23,15 +23,15 @@
         <%= @item.responsible.who %>
       </span>
     </div>
-  <% unless Customer.where(item_id: @item.id).exists? %>
-<% if user_signed_in? && current_user.id == @item.user.id %> 
-    <%= link_to "商品の編集", edit_item_path(@item.id), method: :get, class: "item-red-btn" %> 
-    <p class="or-text">or</p>
-    <%= link_to "削除", item_path, data: {turbo_method: :delete}, class:"item-destroy" %>
-<% elsif user_signed_in?%>
-    <%= link_to "購入画面に進む", item_customers_path(item_id: @item.id), data: { turbo: false }, class:"item-red-btn"%>
-<% end %>
-<% end %>
+  <% if user_signed_in? && !Customer.where(item_id: @item.id).exists? %>
+    <% if current_user.id == @item.user.id %> 
+      <%= link_to "商品の編集", edit_item_path(@item.id), method: :get, class: "item-red-btn" %> 
+      <p class="or-text">or</p>
+      <%= link_to "削除", item_path, data: {turbo_method: :delete}, class:"item-destroy" %>
+    <% else%>
+      <%= link_to "購入画面に進む", item_customers_path(item_id: @item.id), data: { turbo: false }, class:"item-red-btn"%>
+    <% end %>
+  <% end %>
 
     <div class="item-explain-box">
       <span><%= @item.note %></span>
