--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -132,7 +132,14 @@
       <li class='list'>
         <%= link_to item_path(item.id) do %>
         <div class='item-img-content'>
-          <%= image_tag item.image, class: "item-img", alt: "商品画像" %>
+          <%= image_tag item.images[0], class: "item-img", alt: "商品画像" %>
+            <div class="other-images">
+        <% @post.images[1..-1].each do |image| %>
+          <div class="other-image">
+            <%= image_tag image %>
+          </div>
+        <%end%>
+        </div>
       <% if Customer.where(item_id: item.id).exists? %>
           <div class='sold-out'>
            <span>Sold Out!!</span>
