--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -20,7 +20,7 @@
         <p>
           クリックしてファイルをアップロード
         </p>
-        <%= f.file_field :images, id: "item-image", multiple: true, data: {index: 0} %>
+        <%= f.file_field :images, id: "item-image", name: "item[images][]", multiple: true, data: {index: 0} %>
       </div>
     </div>
     <%# /商品画像 %>
