--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -8,13 +8,15 @@
     </h2>
     <div class="item-img-content">
  <%= image_tag @item.images[0], class: "item-box-img" %><br>
-  <div class="other-images">
-    <% @item.images[1..-1].each do |image| %>
-      <div class="other-image">
-        <%= image_tag image %>
-      </div>
-    <%end%>
-  </div>
+ <% if @item.images.present? && @item.images.size > 1 %>
+ <div class="other-images">
+   <% @item.images[1..-1].each do |image| %>
+     <div class="other-image">
+       <%= image_tag image %>
+     </div>
+   <% end %>
+ </div>
+<% end %>
      <% if Customer.where(item_id: @item.id).exists? %>
         <div class="sold-out">
        <span>Sold Out!!</span>
